[gd_scene load_steps=49 format=4 uid="uid://bv8he7kbdvahv"]

[ext_resource type="Script" uid="uid://bd3ssardgqh6l" path="res://scenes/ui/map_edit/editor_main.gd" id="1_itebu"]
[ext_resource type="PackedScene" uid="uid://bcjmjx326e0ij" path="res://scenes/ui/map_edit/hud/buildings_menu/buildings_menu.tscn" id="1_vkbk4"]
[ext_resource type="Script" path="res://scenes/ui/map_edit/camera_controller.gd" id="2_34ixh"]
[ext_resource type="Texture2D" uid="uid://u8qo6w8wiunm" path="res://assets/images/bg.png" id="2_ox0y5"]
[ext_resource type="Texture2D" uid="uid://ck36y08cklkoy" path="res://assets/images/router.png" id="2_q4b1v"]
[ext_resource type="Texture2D" uid="uid://d3fe53xi5p0kp" path="res://assets/images/datacenter.png" id="4_gnnrp"]
[ext_resource type="Texture2D" uid="uid://bk1nspjwnvbre" path="res://assets/images/wall.png" id="5_gdtqr"]
[ext_resource type="Texture2D" uid="uid://caqskv866fi5s" path="res://assets/images/internet.png" id="5_gp5nx"]
[ext_resource type="Texture2D" uid="uid://cac4b82dp00hg" path="res://assets/images/conve-Sheet.png" id="5_ox0y5"]
[ext_resource type="Texture2D" uid="uid://b6y8mxfmjkgpm" path="res://assets/images/grid_frame_placeable-Sheet.png" id="6_ox0y5"]
[ext_resource type="Script" uid="uid://clotvtae2qe6i" path="res://scenes/ui/map_edit/multimesh_packets.gd" id="6_v5v05"]
[ext_resource type="Texture2D" uid="uid://cmihgpmpj6rnq" path="res://assets/images/recycler.png" id="7_gdtqr"]
[ext_resource type="PackedScene" uid="uid://cww15xuqt7r2q" path="res://scenes/ui/map_edit/hud/buildings_list/list_view.tscn" id="7_v5v05"]
[ext_resource type="PackedScene" uid="uid://dwd6vvc3h1221" path="res://scenes/ui/map_edit/hud/header.tscn" id="8_ox0y5"]
[ext_resource type="Texture2D" uid="uid://ctal0h7sxd7pc" path="res://assets/images/filters/content-filter.png" id="8_vjx4v"]
[ext_resource type="Texture2D" uid="uid://bshjqklnsqplj" path="res://assets/images/filters/ip-filter.png" id="9_7sgau"]
[ext_resource type="Texture2D" uid="uid://d1nwjup724he2" path="res://assets/images/filters/length-filter.png" id="10_34ixh"]
[ext_resource type="Texture2D" uid="uid://cw7khcqsi42pn" path="res://assets/images/filters/port-filter.png" id="11_khv36"]
[ext_resource type="Texture2D" uid="uid://3k4v67jxcav3" path="res://assets/images/filters/protocol-filter.png" id="12_rxawh"]
[ext_resource type="Texture2D" uid="uid://bg0cjyhbrfrq2" path="res://assets/images/packets/packets_0.png" id="14_gp5nx"]
[ext_resource type="Texture2D" uid="uid://dtwl1rwx1ar5s" path="res://assets/images/grid_frame_displace-Sheet.png" id="15_vjx4v"]
[ext_resource type="Texture2D" uid="uid://ykm2dr61qt7e" path="res://assets/images/packets/packets_unknown.png" id="18_rxawh"]
[ext_resource type="PackedScene" uid="uid://c27yb1evnql1r" path="res://scenes/ui/map_edit/hud/map_player.tscn" id="18_vjx4v"]
[ext_resource type="Texture2D" uid="uid://blsjsbet6na8a" path="res://assets/images/packets/packets_1.png" id="19_neauy"]
[ext_resource type="PackedScene" uid="uid://doqa6vjfcdi1a" path="res://scenes/ui/sound_button.tscn" id="25_7ixrc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dx6ea"]
texture = ExtResource("2_ox0y5")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_raauk"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_dx6ea")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7ixrc"]
texture = ExtResource("5_gp5nx")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(-8, -8)
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(-8, -8)
4:0/size_in_atlas = Vector2i(2, 2)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(-8, -8)
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(-8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_neauy"]
texture = ExtResource("4_gnnrp")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(-8, -8)
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(-8, -8)
4:0/size_in_atlas = Vector2i(2, 2)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(-8, -8)
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(-8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sgvkm"]
texture = ExtResource("9_7sgau")
0:0/next_alternative_id = 2
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_abemh"]
texture = ExtResource("11_khv36")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kyk3u"]
texture = ExtResource("10_34ixh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5rg2k"]
texture = ExtResource("12_rxawh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_are8n"]
texture = ExtResource("8_vjx4v")
0:0/0 = 0
2:0/0 = 0
1:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ajvdp"]
texture = ExtResource("2_q4b1v")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nna7o"]
texture = ExtResource("7_gdtqr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_igt38"]
resource_name = "conve"
texture = ExtResource("5_ox0y5")
0:0/next_alternative_id = 5
0:0/animation_columns = 4
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/0 = 0
0:0/1 = 1
0:0/1/transpose = true
0:0/2 = 2
0:0/2/flip_h = true
0:0/3 = 3
0:0/3/flip_v = true
0:0/3/transpose = true
0:1/next_alternative_id = 8
0:1/animation_frame_0/duration = 0.1
0:1/animation_frame_1/duration = 0.1
0:1/animation_frame_2/duration = 0.1
0:1/animation_frame_3/duration = 0.1
0:1/0 = 0
0:1/1 = 1
0:1/1/transpose = true
0:1/2 = 2
0:1/2/flip_h = true
0:1/2/flip_v = true
0:1/3 = 3
0:1/3/flip_h = true
0:1/3/flip_v = true
0:1/3/transpose = true
0:1/4 = 4
0:1/4/flip_v = true
0:1/5 = 5
0:1/5/flip_h = true
0:1/5/transpose = true
0:1/6 = 6
0:1/6/flip_h = true
0:1/7 = 7
0:1/7/flip_v = true
0:1/7/transpose = true
0:2/next_alternative_id = 5
0:2/animation_columns = 4
0:2/animation_frame_0/duration = 0.1
0:2/animation_frame_1/duration = 0.1
0:2/animation_frame_2/duration = 0.1
0:2/animation_frame_3/duration = 0.1
0:2/0 = 0
0:2/1 = 1
0:2/1/transpose = true
0:2/2 = 2
0:2/2/flip_h = true
0:2/3 = 3
0:2/3/flip_v = true
0:2/3/transpose = true
0:3/next_alternative_id = 4
0:3/animation_frame_0/duration = 0.1
0:3/animation_frame_1/duration = 0.1
0:3/animation_frame_2/duration = 0.1
0:3/animation_frame_3/duration = 0.1
0:3/0 = 0
0:3/1 = 1
0:3/1/transpose = true
0:3/2 = 2
0:3/2/flip_h = true
0:3/3 = 3
0:3/3/flip_v = true
0:3/3/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vjx4v"]
texture = ExtResource("5_gdtqr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ajvdp"]
sources/1 = SubResource("TileSetAtlasSource_neauy")
sources/0 = SubResource("TileSetAtlasSource_7ixrc")
sources/2 = SubResource("TileSetAtlasSource_igt38")
sources/15 = SubResource("TileSetAtlasSource_ajvdp")
sources/16 = SubResource("TileSetAtlasSource_nna7o")
sources/11 = SubResource("TileSetAtlasSource_abemh")
sources/12 = SubResource("TileSetAtlasSource_kyk3u")
sources/13 = SubResource("TileSetAtlasSource_5rg2k")
sources/14 = SubResource("TileSetAtlasSource_are8n")
sources/7 = SubResource("TileSetAtlasSource_vjx4v")
sources/10 = SubResource("TileSetAtlasSource_sgvkm")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vml5j"]
texture = ExtResource("6_ox0y5")
0:0/animation_columns = 16
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/animation_frame_4/duration = 0.1
0:0/animation_frame_5/duration = 0.1
0:0/animation_frame_6/duration = 0.1
0:0/animation_frame_7/duration = 0.1
0:0/animation_frame_8/duration = 0.1
0:0/animation_frame_9/duration = 0.1
0:0/animation_frame_10/duration = 0.1
0:0/animation_frame_11/duration = 0.1
0:0/animation_frame_12/duration = 0.1
0:0/animation_frame_13/duration = 0.1
0:0/animation_frame_14/duration = 0.1
0:0/animation_frame_15/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7sgau"]
texture = ExtResource("15_vjx4v")
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/animation_frame_4/duration = 0.1
0:0/animation_frame_5/duration = 0.1
0:0/animation_frame_6/duration = 0.1
0:0/animation_frame_7/duration = 0.1
0:0/animation_frame_8/duration = 0.1
0:0/animation_frame_9/duration = 0.1
0:0/animation_frame_10/duration = 0.1
0:0/animation_frame_11/duration = 0.1
0:0/animation_frame_12/duration = 0.1
0:0/animation_frame_13/duration = 0.1
0:0/animation_frame_14/duration = 0.1
0:0/animation_frame_15/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_mh3nm"]
sources/0 = SubResource("TileSetAtlasSource_vml5j")
sources/1 = SubResource("TileSetAtlasSource_7sgau")

[sub_resource type="QuadMesh" id="QuadMesh_rxawh"]
size = Vector2(16, 16)

[sub_resource type="MultiMesh" id="MultiMesh_vjx4v"]
mesh = SubResource("QuadMesh_rxawh")

[sub_resource type="QuadMesh" id="QuadMesh_neauy"]
size = Vector2(16, 16)

[sub_resource type="MultiMesh" id="MultiMesh_7ixrc"]
mesh = SubResource("QuadMesh_neauy")

[sub_resource type="QuadMesh" id="QuadMesh_nna7o"]
size = Vector2(16, 16)

[sub_resource type="MultiMesh" id="MultiMesh_are8n"]
mesh = SubResource("QuadMesh_nna7o")

[node name="EditorMain" type="Node2D"]
script = ExtResource("1_itebu")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_34ixh")

[node name="Buildings" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Buildings"]
texture_repeat = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -508.0
offset_top = -512.0
offset_right = 1540.0
offset_bottom = 1536.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ox0y5")
stretch_mode = 1

[node name="Background" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_raauk")

[node name="Building" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_ajvdp")

[node name="BuildplanPreview" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_ajvdp")

[node name="BuildplanGridOverlay" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_mh3nm")

[node name="BuildplanDraggingPreview" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_ajvdp")

[node name="BuildplanDraggingGridOverlay" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_mh3nm")

[node name="BuildplanMousePosPreview" type="TileMapLayer" parent="Buildings"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_ajvdp")

[node name="DeletionArea" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
mouse_filter = 2
color = Color(0.8, 0.266667, 0.145098, 0.294118)

[node name="MultimeshPackets" type="Node2D" parent="."]
script = ExtResource("6_v5v05")

[node name="MultimeshCorrectPackets" type="MultiMeshInstance2D" parent="MultimeshPackets"]
unique_name_in_owner = true
multimesh = SubResource("MultiMesh_vjx4v")
texture = ExtResource("14_gp5nx")

[node name="MultimeshIncorrectPackets" type="MultiMeshInstance2D" parent="MultimeshPackets"]
unique_name_in_owner = true
multimesh = SubResource("MultiMesh_7ixrc")
texture = ExtResource("19_neauy")

[node name="MultimeshUnknownPackets" type="MultiMeshInstance2D" parent="MultimeshPackets"]
unique_name_in_owner = true
multimesh = SubResource("MultiMesh_are8n")
texture = ExtResource("18_rxawh")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MapPlayer" parent="HUD" instance=ExtResource("18_vjx4v")]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 463.0
offset_top = -29.0
offset_right = 48.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.36, 0.36)

[node name="header" parent="HUD" instance=ExtResource("8_ox0y5")]
unique_name_in_owner = true

[node name="BuildingMenu" parent="HUD" instance=ExtResource("1_vkbk4")]
offset_left = 156.0
offset_top = 267.0
offset_right = -226.0
offset_bottom = -63.0

[node name="BuildingList" parent="HUD" instance=ExtResource("7_v5v05")]
unique_name_in_owner = true
offset_top = 298.0
offset_right = 0.0
offset_bottom = -14.0

[node name="ShowPackets" type="Button" parent="HUD"]
unique_name_in_owner = true
offset_left = 540.0
offset_top = 72.0
offset_right = 623.0
offset_bottom = 92.0
text = "ShowPackets"

[node name="ShowManual" type="Button" parent="HUD"]
unique_name_in_owner = true
offset_left = 540.0
offset_top = 96.0
offset_right = 623.0
offset_bottom = 116.0
text = "Manual"

[node name="ShowTutorial" type="Button" parent="HUD"]
unique_name_in_owner = true
offset_left = 540.0
offset_top = 120.0
offset_right = 623.0
offset_bottom = 140.0
text = "Tutorial"

[node name="QuitButton" parent="HUD" instance=ExtResource("25_7ixrc")]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 12.0
offset_right = 128.0
texts = "やめる"
